--- a/templates/pages/hub.mustache
+++ b/templates/pages/hub.mustache
@@ -21,10 +21,10 @@
 
 <div class="container-fluid">
    <div class="row-fluid">
-      <div id="hub" class="metro span12">
-         <div class="metro-sections">
+      <div id="hub" class="metro panorama span12">
+         <div class="panorama-sections">
 
-            <div id="section1" class="metro-section tile-span-4">
+            <div id="section1" class="panorama-section tile-span-4">
 
                <h2>BootMetro Demos</h2>
 
@@ -92,7 +92,7 @@
 
             </div>
 
-            <div id="section2" class="metro-section tile-span-4">
+            <div id="section2" class="panorama-section tile-span-4">
 
                <h2>Bootstrap Metro</h2>
 
@@ -140,8 +140,8 @@
          </div>
       </div>
 
-      <a id="tiles-scroll-prev" href="#">&#xe05d;</a>
-      <a id="tiles-scroll-next" href="#">&#xe059;</a>
+      <a id="panorama-scroll-prev" href="#">&#xe05d;</a>
+      <a id="panorama-scroll-next" href="#">&#xe059;</a>
 
    </div>
 </div>
