--- a/content/css/bootmetro.css
+++ b/content/css/bootmetro.css
@@ -7439,7 +7439,7 @@ Progress control. */
   position: relative;
   width: 10000px;
   height: auto;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .panorama .panorama-sections h2 {
@@ -8190,7 +8190,7 @@ article.tile-listviewitem-detail section {
 
 #charms .charms-header {
   position: relative;
-  padding: 40px 0 10px 0;
+  padding: 40px 0 30px 0;
 }
 
 #charms .charms-header a#pin-charms {
