--- a/templates/pages/about.mustache
+++ b/templates/pages/about.mustache
@@ -41,7 +41,7 @@
 
          <h2>Contributors <small></small></h2>
          <p>
-            I wish to thank Alexander Finger for his support and all the githubbers who keep me on the road to improve the project.
+            I wish to thank Alexander Finger &amp; David Smith for their support and all the githubbers who keep me on the road to improve the project.
          </p>
 
       </div>
