--- a/less/bootmetro/buttons.less
+++ b/less/bootmetro/buttons.less
@@ -69,7 +69,7 @@ Back button.
 
 #nav-bar .win-backbutton {
    position: absolute;
-   left: 10px;
+   left: 0;
    top: 8px;
 }
 
@@ -271,28 +271,4 @@ AppBar control.
 
 
 
-/* Narrow buttons and no labels when < 1024px. */
-@media (max-width: 1023px) {
-   a.win-command .win-label,
-   button.win-command .win-label {
-      display: none;
-   }
-   a.win-command .win-commandicon,
-   button.win-command .win-commandicon {
-      margin: 0 8px; /* 2px margin for focus */
-   }
-   .win-commandlayout {
-      min-height: 68px;
-   }
-   hr.win-command {
-      margin-bottom: 14px;
-      margin-top: 14px;
-   }
-}
 
-@media (min-width: 321px) and (max-width: 1023px) {
-   hr.win-command {
-      margin-left: 10px;
-      margin-right: 9px;
-   }
-}
