--- a/less/bootmetro/scaffolding.less
+++ b/less/bootmetro/scaffolding.less
@@ -55,6 +55,7 @@ img {
    display: inline-block;
    height: 46px;
    color: #5A5A5A;
+
    &:hover {
       color: #000;
    }
@@ -70,6 +71,7 @@ img {
 #header-container {
    display: inline-block;
    vertical-align: top;
+   margin-left: 50px;
 }
 
 header {
@@ -86,22 +88,12 @@ header {
 }
 
 
-// The Grid
-.container-fluid {
-   padding-left: 70px;
-   padding-right: 70px;
-}
+//// The Grid
+//.container-fluid {
+//   padding-left: 70px;
+//   padding-right: 70px;
+//}
 
-/*
-Responsive Media Queries
-*/
-@media (max-width: 480px) {
-
-   .container-fluid {
-      padding: 0;
-   }
-
-}
 
 .row-fluid .hide {
    display: none;
