--- a/less/bootmetro/tiles.less
+++ b/less/bootmetro/tiles.less
@@ -37,6 +37,8 @@
 
 .panorama {
    overflow: auto;
+   margin: 0 40px;
+   position: relative;
 
    &.nohidden {
       width: auto;
@@ -97,8 +99,9 @@
 
    }
 
+}
 
-
+.metro {
    .tile {
       position: relative;
       display: block;
@@ -389,8 +392,8 @@
 #panorama-scroll-prev,
 #panorama-scroll-next {
    position: absolute;
-   top: 20%;
-   left: 32px;
+   top: 38px;
+   left: 0;
 
    border-width: 2px;
    border-style: solid;
@@ -411,7 +414,7 @@
 }
 #panorama-scroll-next {
    left: auto;
-   right: 32px;
+   right: 0;
 }
 
 
