--- a/templates/pages/appbar-demo.mustache
+++ b/templates/pages/appbar-demo.mustache
@@ -1,8 +1,8 @@
 <!-- Header
 ================================================== -->
-<header id="nav-bar" class="container-fluid">
-   <div class="row-fluid">
-      <div class="span7">
+<header id="nav-bar" class="container">
+   <div class="row">
+      <div class="span12">
          <div id="header-container">
             <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
             <h5>{{appname}}</h5>
@@ -14,14 +14,14 @@
                {{>headermenu}}
             </div>
          </div>
+         {{>loggeduser}}
       </div>
-      {{>loggeduser}}
    </div>
 </header>
 
 
-<div class="container-fluid">
-   <div class="row-fluid">
+<div class="container">
+   <div class="row">
       <div class="span12">
          <p>This page show a full Application Bar stacked on the bottom of the page with plenty of commands.</p>
          <br />
