--- a/templates/pages/components.mustache
+++ b/templates/pages/components.mustache
@@ -1,8 +1,8 @@
 <!-- Subhead
 ================================================== -->
-<header id="nav-bar" class="container-fluid">
-   <div class="row-fluid">
-      <div class="span7">
+<header id="nav-bar" class="container">
+   <div class="row">
+      <div class="span12">
          <div id="header-container">
             <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
             <h5>{{appname}}</h5>
@@ -13,12 +13,12 @@
                </a>
                {{>headermenu}}
             </div>
+            <div id="top-info" class="pull-right">
+               <a id="settings" class="pull-right" href="#">
+                  <b class="icon-settings"></b>
+               </a>
+            </div>
          </div>
-      </div>
-      <div id="top-info" class="span5 pull-right">
-         <a id="settings" class="pull-right" href="#">
-            <b class="icon-settings"></b>
-         </a>
       </div>
    </div>
 </header>
