--- a/templates/pages/javascript.mustache
+++ b/templates/pages/javascript.mustache
@@ -1,8 +1,8 @@
 <!-- Subhead
 ================================================== -->
-<header id="nav-bar" class="container-fluid">
-   <div class="row-fluid">
-      <div class="span7">
+<header id="nav-bar" class="container">
+   <div class="row">
+      <div class="span12">
          <div id="header-container">
             <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
             <h5>{{appname}}</h5>
@@ -14,11 +14,11 @@
                {{>headermenu}}
             </div>
          </div>
-      </div>
-      <div id="top-info" class="span5 pull-right">
-         <a id="settings" class="pull-right" href="#">
-            <b class="icon-settings"></b>
-         </a>
+         <div id="top-info" class="pull-right">
+            <a id="settings" class="pull-right" href="#">
+               <b class="icon-settings"></b>
+            </a>
+         </div>
       </div>
    </div>
 </header>
@@ -48,7 +48,6 @@
           <li><a href="#carousel"><i class="icon-chevron-right"></i> {{_i}}Carousel{{/i}}</a></li>
           <li><a href="#typeahead"><i class="icon-chevron-right"></i> {{_i}}Typeahead{{/i}}</a></li>
           <li><a href="#affix"><i class="icon-chevron-right"></i> {{_i}}Affix{{/i}}</a></li>
-           <li><a href="#datepicker"><i class="icon-chevron-right"></i> {{_i}}DatePicker{{/i}}</a></li>
         </ul>
       </div>
       <div class="span9">
