--- a/templates/partials/logged-user.mustache
+++ b/templates/partials/logged-user.mustache
@@ -1,4 +1,4 @@
-<div id="top-info" class="span5 pull-right">
+<div id="top-info" class="pull-right">
    <a id="settings" class="pull-right" href="#">
       <b class="icon-settings"></b>
    </a>
