--- a/content/css/bootmetro-responsive.css
+++ b/content/css/bootmetro-responsive.css
@@ -441,6 +441,10 @@
   }
 }
 
+@media (min-width: 1200px) {
+  
+}
+
 @media (min-width: 768px) and (max-width: 979px) {
   .row {
     margin-left: -20px;
@@ -782,6 +786,39 @@
   }
 }
 
+@media (min-width: 768px) and (max-width: 979px) {
+  
+}
+
+@media (min-width: 321px) and (max-width: 1023px) {
+  hr.win-command {
+    margin-right: 9px;
+    margin-left: 10px;
+  }
+}
+
+/* Narrow buttons and no labels when < 1024px. */
+
+@media (max-width: 1023px) {
+  a.win-command .win-label,
+  button.win-command .win-label {
+    display: none;
+  }
+  a.win-command .win-commandicon,
+  button.win-command .win-commandicon {
+    margin: 0 8px;
+    /* 2px margin for focus */
+  
+  }
+  .win-commandlayout {
+    min-height: 68px;
+  }
+  hr.win-command {
+    margin-top: 14px;
+    margin-bottom: 14px;
+  }
+}
+
 @media (max-width: 767px) {
   body {
     padding-right: 20px;
@@ -932,6 +969,16 @@
   }
 }
 
+@media (max-width: 767px) {
+  
+}
+
+@media (max-width: 480px) {
+  .container-fluid {
+    padding: 0;
+  }
+}
+
 @media (max-width: 979px) {
   body {
     padding-top: 0;
@@ -991,9 +1038,9 @@
   .nav-collapse .btn {
     padding: 4px 10px 4px;
     font-weight: normal;
-    -webkit-border-radius: 4px;
-       -moz-border-radius: 4px;
-            border-radius: 4px;
+    -webkit-border-radius: 0;
+       -moz-border-radius: 0;
+            border-radius: 0;
   }
   .nav-collapse .dropdown-menu li + li a {
     margin-bottom: 2px;
