--- a/templates/pages/about.mustache
+++ b/templates/pages/about.mustache
@@ -1,8 +1,8 @@
 <!-- Header
 ================================================== -->
-<header id="nav-bar" class="container-fluid">
-   <div class="row-fluid">
-      <div class="span7">
+<header id="nav-bar" class="container">
+   <div class="row">
+      <div class="span12">
          <div id="header-container">
             <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
             <h5>{{appname}}</h5>
@@ -18,8 +18,8 @@
    </div>
 </header>
 
-<div class="container-fluid">
-   <div class="row-fluid">
+<div class="container">
+   <div class="row">
       <div class="span12">
 
          <h1>About <small></small></h1>
