--- a/templates/pages/wide-tiles-templates.mustache
+++ b/templates/pages/wide-tiles-templates.mustache
@@ -1,8 +1,8 @@
 <!-- Header
 ================================================== -->
-<header id="nav-bar" class="container-fluid">
-   <div class="row-fluid">
-      <div class="span7">
+<header id="nav-bar" class="container">
+   <div class="row">
+      <div class="span12">
          <div id="header-container">
             <a id="backbutton" class="win-backbutton" href="./tiles-templates.html"></a>
             <h5>{{appname}}</h5>
@@ -14,16 +14,16 @@
                {{>headermenu}}
             </div>
          </div>
-      </div>
-      <div id="top-info" class="span5 pull-right">
-         <a id="settings" class="pull-right" href="#">
-            <b class="icon-settings"></b>
-         </a>
+         <div id="top-info" class="pull-right">
+            <a id="settings" class="pull-right" href="#">
+               <b class="icon-settings"></b>
+            </a>
+         </div>
       </div>
    </div>
 </header>
 
-<div class="container-fluid">
+<div class="container">
    <div class="subnav">
       <ul class="nav nav-pills">
          <li><a href="#textonly">{{_i}}Wide Text Only Tiles{{/i}}</a></li>
@@ -33,8 +33,8 @@
    </div>
 </div>
 
-<div class="container-fluid metro">
-   <div class="row-fluid">
+<div class="container metro">
+   <div class="row">
       <div class="span12">
 
 
