Fix Issue #45 Pivot. Fixes for responsive panorama.

--- a/content/css/bootmetro-responsive.css
+++ b/content/css/bootmetro-responsive.css
@@ -977,6 +977,13 @@
   .container-fluid {
     padding: 0;
   }
+  .panorama {
+    margin: 0;
+  }
+  #panorama-scroll-prev,
+  #panorama-scroll-next {
+    top: 0;
+  }
 }
 
 @media (max-width: 979px) {
