--- a/less/bootmetro/responsive-767px-max.less
+++ b/less/bootmetro/responsive-767px-max.less
@@ -20,4 +20,11 @@
       padding: 0;
    }
 
+   .panorama {
+      margin: 0;
+   }
+
+   #panorama-scroll-prev, #panorama-scroll-next {
+      top: 0;
+   }
 }
