--- a/templates/partials/logged-user.mustache
+++ b/templates/partials/logged-user.mustache
@@ -3,7 +3,7 @@
       <b class="icon-settings"></b>
    </a>
    <hr class="separator pull-right"/>
-   <a href="#" class="pull-right">
+   <a id="logged-user" href="#" class="pull-right">
       <div class="top-info-block">
          <h3>FirstName</h3>
          <h4>LastName</h4>
