Fixes post BT 2.2.2 integration

--- a/templates/pages/javascript.mustache
+++ b/templates/pages/javascript.mustache
@@ -141,7 +141,7 @@ $('#myModal').on('show', function (e) {
           <div class="bs-docs-example" style="background-color: #f5f5f5;">
             <div class="modal" style="position: relative; top: auto; left: auto; right: auto; margin: 0 auto 20px; z-index: 1; max-width: 100%;">
               <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                 <h3>{{_i}}Modal header{{/i}}</h3>
               </div>
               <div class="modal-body">
@@ -953,14 +953,14 @@ $('a[data-toggle="tab"]').on('shown', function (e) {
         <p>{{_i}}Add dismiss functionality to all alert messages with this plugin.{{/i}}</p>
         <div class="bs-docs-example">
           <div class="alert fade in">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <button type="button" class="close" data-dismiss="alert"></button>
             <strong>{{_i}}Holy guacamole!{{/i}}</strong> {{_i}}Best check yo self, you're not looking too good.{{/i}}
           </div>
         </div>{{! /example }}
 
         <div class="bs-docs-example">
           <div class="alert alert-block alert-error fade in">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <button type="button" class="close" data-dismiss="alert"></button>
             <h4 class="alert-heading">{{_i}}Oh snap! You got an error!{{/i}}</h4>
             <p>{{_i}}Change this and that and try again. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum.{{/i}}</p>
             <p>
@@ -1342,8 +1342,8 @@ $('#myCollapsible').on('hidden', function () {
                     </div>
                   </div>
                 </div>
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">&#xe0f4;</a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">&#xe0f1;</a>
               </div>
             </div>{{! /example }}
 <pre class="prettyprint linenums">
