--- a/templates/pages/components.mustache
+++ b/templates/pages/components.mustache
@@ -1624,17 +1624,17 @@
           <p>{{_i}}Alternatively, you can align each link to the sides:{{/i}}</p>
           <div class="bs-docs-example">
             <ul class="pager">
-              <li class="previous"><a href="#">{{_i}}&larr; Older{{/i}}</a></li>
-              <li class="next"><a href="#">{{_i}}Newer &rarr;{{/i}}</a></li>
+              <li class="previous"><a href="#">{{_i}}Older{{/i}}</a></li>
+              <li class="next"><a href="#">{{_i}}Newer{{/i}}</a></li>
             </ul>
           </div>
 <pre class="prettyprint linenums">
 &lt;ul class="pager"&gt;
   &lt;li class="previous"&gt;
-    &lt;a href="#"&gt;{{_i}}&amp;larr; Older{{/i}}&lt;/a&gt;
+    &lt;a href="#"&gt;{{_i}}Older{{/i}}&lt;/a&gt;
   &lt;/li&gt;
   &lt;li class="next"&gt;
-    &lt;a href="#"&gt;{{_i}}Newer &amp;rarr;{{/i}}&lt;/a&gt;
+    &lt;a href="#"&gt;{{_i}}Newer{{/i}}&lt;/a&gt;
   &lt;/li&gt;
 &lt;/ul&gt;
 </pre>
@@ -1643,14 +1643,14 @@
           <p>{{_i}}Pager links also use the general <code>.disabled</code> utility class from the pagination.{{/i}}</p>
           <div class="bs-docs-example">
             <ul class="pager">
-              <li class="previous disabled"><a href="#">{{_i}}&larr; Older{{/i}}</a></li>
-              <li class="next"><a href="#">{{_i}}Newer &rarr;{{/i}}</a></li>
+              <li class="previous disabled"><a href="#">{{_i}}Older{{/i}}</a></li>
+              <li class="next"><a href="#">{{_i}}Newer{{/i}}</a></li>
             </ul>
           </div>
 <pre class="prettyprint linenums">
 &lt;ul class="pager"&gt;
   &lt;li class="previous disabled"&gt;
-    &lt;a href="#"&gt;{{_i}}&amp;larr; Older{{/i}}&lt;/a&gt;
+    &lt;a href="#"&gt;{{_i}}Older{{/i}}&lt;/a&gt;
   &lt;/li&gt;
   ...
 &lt;/ul&gt;
@@ -2009,22 +2009,22 @@
           <p>{{_i}}Wrap any text and an optional dismiss button in <code>.alert</code> for a basic warning alert message.{{/i}}</p>
           <div class="bs-docs-example">
             <div class="alert">
-              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <button type="button" class="close" data-dismiss="alert"></button>
               <strong>{{_i}}Warning!{{/i}}</strong> {{_i}}Best check yo self, you're not looking too good.{{/i}}
             </div>
           </div>
 <pre class="prettyprint linenums">
 &lt;div class="alert"&gt;
-  &lt;button type="button" class="close" data-dismiss="alert"&gt;&amp;times;&lt;/button&gt;
+  &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
   &lt;strong&gt;{{_i}}Warning!{{/i}}&lt;/strong&gt; {{_i}}Best check yo self, you're not looking too good.{{/i}}
 &lt;/div&gt;
 </pre>
 
           <h3>{{_i}}Dismiss buttons{{/i}}</h3>
           <p>{{_i}}Mobile Safari and Mobile Opera browsers, in addition to the <code>data-dismiss="alert"</code> attribute, require an <code>href="#"</code> for the dismissal of alerts when using an <code>&lt;a&gt;</code> tag.{{/i}}</p>
-          <pre class="prettyprint linenums">&lt;a href="#" class="close" data-dismiss="alert"&gt;&amp;times;&lt;/a&gt;</pre>
+          <pre class="prettyprint linenums">&lt;a href="#" class="close" data-dismiss="alert"&gt;&lt;/a&gt;</pre>
           <p>{{_i}}Alternatively, you may use a <code>&lt;button&gt;</code> element with the data attribute, which we have opted to do for our docs. When using <code>&lt;button&gt;</code>, you must include <code>type="button"</code> or your forms may not submit.{{/i}}</p>
-          <pre class="prettyprint linenums">&lt;button type="button" class="close" data-dismiss="alert"&gt;&amp;times;&lt;/button&gt;</pre>
+          <pre class="prettyprint linenums">&lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;</pre>
 
           <h3>{{_i}}Dismiss alerts via JavaScript{{/i}}</h3>
           <p>{{_i}}Use the <a href="./javascript.html#alerts">alerts jQuery plugin</a> for quick and easy dismissal of alerts.{{/i}}</p>
@@ -2037,14 +2037,14 @@
           <p>{{_i}}For longer messages, increase the padding on the top and bottom of the alert wrapper by adding <code>.alert-block</code>.{{/i}}</p>
           <div class="bs-docs-example">
             <div class="alert alert-block">
-              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <button type="button" class="close" data-dismiss="alert"></button>
               <h4>{{_i}}Warning!{{/i}}</h4>
               <p>{{_i}}Best check yo self, you're not looking too good.{{/i}} Nulla vitae elit libero, a pharetra augue. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
             </div>
           </div>
 <pre class="prettyprint linenums">
 &lt;div class="alert alert-block"&gt;
-  &lt;button type="button" class="close" data-dismiss="alert"&gt;&amp;times;&lt;/button&gt;
+  &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
   &lt;h4&gt;{{_i}}Warning!{{/i}}&lt;/h4&gt;
   {{_i}}Best check yo self, you're not...{{/i}}
 &lt;/div&gt;
@@ -2060,7 +2060,7 @@
           <h3>{{_i}}Error or danger{{/i}}</h3>
           <div class="bs-docs-example">
             <div class="alert alert-error">
-              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <button type="button" class="close" data-dismiss="alert"></button>
               <strong>{{_i}}Oh snap!{{/i}}</strong> {{_i}}Change a few things up and try submitting again.{{/i}}
             </div>
           </div>
@@ -2073,7 +2073,7 @@
           <h3>{{_i}}Success{{/i}}</h3>
           <div class="bs-docs-example">
             <div class="alert alert-success">
-              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <button type="button" class="close" data-dismiss="alert"></button>
               <strong>{{_i}}Well done!{{/i}}</strong> {{_i}}You successfully read this important alert message.{{/i}}
             </div>
           </div>
@@ -2086,7 +2086,7 @@
           <h3>{{_i}}Information{{/i}}</h3>
           <div class="bs-docs-example">
             <div class="alert alert-info">
-              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <button type="button" class="close" data-dismiss="alert"></button>
               <strong>{{_i}}Heads up!{{/i}}</strong> {{_i}}This alert needs your attention, but it's not super important.{{/i}}
             </div>
           </div>
